--- a/src/Contracts/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
+++ b/src/Contracts/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
@@ -48,6 +48,7 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="IAttribute.cs" />
+    <Compile Include="ICharacterAttributeName.cs" />
     <Compile Include="ICharacterAttributeRow.cs" />
     <Compile Include="ICharacter.cs" />
     <Compile Include="ICharacterDetailsDto.cs" />
