--- a/src/Implementation/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
+++ b/src/Implementation/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
@@ -45,6 +45,7 @@
     </Compile>
     <Compile Include="DefaultAttributeStrategy.cs" />
     <Compile Include="BaseApiService.cs" />
+    <Compile Include="DefaultCharacterAttributeNameProvider.cs" />
     <Compile Include="DefaultCharacterAttributeService.cs" />
     <Compile Include="DefaultCharacterService.cs" />
     <Compile Include="DefaultDtoProvider.cs" />
