--- a/src/Implementation/FrannHammer.WebApi/FrannHammer.WebApi.csproj
+++ b/src/Implementation/FrannHammer.WebApi/FrannHammer.WebApi.csproj
@@ -244,8 +244,10 @@
     <Compile Include="Controllers\MovementController.cs" />
     <Compile Include="Controllers\UniqueDataController.cs" />
     <Compile Include="EnrichingHandler.cs" />
+    <Compile Include="HypermediaServices\CharacterAttributeNameResourceEnricher.cs" />
     <Compile Include="HypermediaServices\CharacterAttributeRowResourceEnricher.cs" />
     <Compile Include="HypermediaServices\CharacterResourceEnricher.cs" />
+    <Compile Include="HypermediaServices\ManyCharacterAttributeNameResourceEnricher.cs" />
     <Compile Include="HypermediaServices\ManyCharacterAttributeRowResourceEnricher.cs" />
     <Compile Include="HypermediaServices\ManyCharacterResourceEnricher.cs" />
     <Compile Include="HypermediaServices\ManyMovementResourceEnricher.cs" />
@@ -255,6 +257,7 @@
     <Compile Include="HypermediaServices\MoveResourceEnricher.cs" />
     <Compile Include="HypermediaServices\ObjectContentResponseEnricher.cs" />
     <Compile Include="HypermediaServices\UniqueDataResourceEnricher.cs" />
+    <Compile Include="Models\CharacterAttributeNameResource.cs" />
     <Compile Include="Models\CharacterAttributeRowResource.cs" />
     <Compile Include="Models\MovementResource.cs" />
     <Compile Include="CustomExceptionFilterAttribute.cs" />
