--- a/src/Implementation/FrannHammer.Seeder/App.config
+++ b/src/Implementation/FrannHammer.Seeder/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings file="..\..\..\..\appsettings.config">
-    <add key="databaseName" value="frannhammer_production "/>
+    <add key="databaseName" value="frannhammer_production " />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="ds151062.mlab.com:51062/"/>
+    <add name="DefaultConnection" connectionString="ds151062.mlab.com:51062/" />
   </connectionStrings>
 
     <startup> 
@@ -15,6 +15,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
