--- a/src/Tests/FrannHammer.Seeding.Tests/packages.config
+++ b/src/Tests/FrannHammer.Seeding.Tests/packages.config
@@ -2,10 +2,12 @@
 <packages>
   <package id="Autofac" version="4.5.0" targetFramework="net45" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net45" />
-  <package id="MongoDB.Bson" version="2.4.3" targetFramework="net45" />
-  <package id="MongoDB.Driver" version="2.4.3" targetFramework="net45" />
-  <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net45" />
+  <package id="DnsClient" version="1.0.7" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.7.0" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.7.0" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.7.0" targetFramework="net45" />
   <package id="Moq" version="4.7.8" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
 </packages>
