--- a/src/Tests/FrannHammer.WebApi.Specs/app.config
+++ b/src/Tests/FrannHammer.WebApi.Specs/app.config
@@ -3,8 +3,8 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
-  <connectionStrings configSource="tests.connectionstrings.config"/>
-  <appSettings file="tests.appsettings.config"/>
+  <connectionStrings configSource="tests.connectionstrings.config" />
+  <appSettings file="tests.appsettings.config" />
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -70,6 +70,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
