--- a/src/Tests/FrannHammer.WebApi.Specs/packages.config
+++ b/src/Tests/FrannHammer.WebApi.Specs/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net45" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="DnsClient" version="1.0.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
@@ -12,9 +13,9 @@
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Testing" version="3.1.0" targetFramework="net45" />
-  <package id="MongoDB.Bson" version="2.4.3" targetFramework="net45" />
-  <package id="MongoDB.Driver" version="2.4.3" targetFramework="net45" />
-  <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.7.0" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.7.0" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.7.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
   <package id="NUnit.Console" version="3.6.1" targetFramework="net45" />
@@ -29,5 +30,6 @@
   <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net45" />
   <package id="SpecRun.Runner" version="1.5.2" targetFramework="net45" />
   <package id="SpecRun.SpecFlow" version="1.5.2" targetFramework="net45" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
 </packages>
