--- a/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.8.12" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Data.DataSetExtensions" />
