--- a/src/Implementation/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
+++ b/src/Implementation/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
@@ -10,6 +10,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
     <DocumentationFile>bin\$(Configuration)\FrannHammer.Api.Services.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
