--- a/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -14,6 +14,7 @@
     <DebugType>pdbonly</DebugType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ExCSS-Core" Version="4.0.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.8.12" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
