--- a/src/Implementation/FrannHammer.NetCore.WebApi/FrannHammer.NetCore.WebApi.csproj
+++ b/src/Implementation/FrannHammer.NetCore.WebApi/FrannHammer.NetCore.WebApi.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" />
+    <PackageReference Include="Sentry.AspNetCore" Version="1.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
