--- a/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="ExCSS-Core" Version="4.0.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.8.12" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup>
